objects/MIBOS_Case_Time__c.object
<CustomObject>
    <fields>
        <fullName>Case_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Event</label>
        <referenceTo>Case_Event__c</referenceTo>
        <relationshipLabel>Case Times</relationshipLabel>
        <relationshipName>Case_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Times</relationshipLabel>
        <relationshipName>Case_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Log__c</fullName>
        <label>Error Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Assistant_Tech__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Assistant Tech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Synched__c</fullName>
        <label>Last Synched with FinancialForce</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Source ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time_Form__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync with FinancialForce?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synched_Time__c</fullName>
        <label>Synched Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timecard</label>
        <referenceTo>pse__Timecard_Header__c</referenceTo>
        <relationshipLabel>Case Times</relationshipLabel>
        <relationshipName>Case_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Effort__c</fullName>
        <label>Work Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Case Time object from Roadnet</description>
    <label>Case Time</label>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>Case Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>